# STE-MM

./: .gitignore  LICENSE  README.md  requirements.txt
configs/: config_rebasin.yaml  config_train.yaml
configs/rebasin/: rebasin.yaml
configs/rebasin/method/: ste.yaml  wm.yaml
configs/train/: params.yaml
configs/train/dataset/: CIFAR10.yaml  FMNIST.yaml  MNIST.yaml  imagenet.yaml
configs/train/network/: VGG.yaml  mlp.yaml  resnet20.yaml  resnet50.yaml
lap_uv/: CMakeLists.txt  CMakePresets.json  run_cmake.sh
lap_uv/include/: lap.h
lap_uv/src/: main.cpp
scripts/: run.sh  run_perm.sh  run_train.sh
srcs/: find_permutations.py  train.py
srcs/analysis/: metric.py
srcs/datasets/: CIFAR10.py  FMNIST.py  MNIST.py  imagenet.py  template.py
srcs/networks/: VGG.py  lit_module.py  mlp.py  resnet.py  resnet20.py  resnet50.py
srcs/search/: weight_matching.py  weight_matching_uv.py
srcs/search/mult/: ste.py  wm.py
srcs/sinkhorn/loss/: __init__.py  loss.py
srcs/sinkhorn/rebasinnet/: sinkhorn.py  symmnet.py
srcs/sinkhorn/rebasinnet/graph/: graph.py
srcs/utils/: idgenerator.py  loader.py  merge.py  nn.py  repair.py  seed.py
